[package]
name = "tsm-language-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
tower-lsp = "0.20.0"
tree-sitter = "0.22.6"
tree-sitter-typescript = "0.21.2"
walkdir = "2.5.0"
